--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Emmanuel Kandilas Personal Website" />
 
-    <title>Emmanuel Kandilas</title>
+    <title>Emmanuel Kandilas Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
